--- a/ui/style.css
+++ b/ui/style.css
@@ -20,3 +20,12 @@ body {
     height: 200px;
 }
 
+
+  .container{
+                max-width: 800px;
+    margin: 0 auto;
+    color: #039BE5;
+    padding-top: 60px;
+    padding-left: 30px;
+    padding-right: 30px;
+            }
